--- a/db/config/config.json
+++ b/db/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "123456",
+    "password": "G@lden!",
     "database": "travel_db",
     "host": "127.0.0.1",
     "dialect": "postgres",
