--- a/db/config/config.json
+++ b/db/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "G@lden!",
+    "username": "meshekah",
+    "password": null,
     "database": "travel_db",
     "host": "127.0.0.1",
     "dialect": "postgres",
