--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
